--- a/shifts/src/main/res/layout/recycler_shift_item.xml
+++ b/shifts/src/main/res/layout/recycler_shift_item.xml
@@ -26,7 +26,8 @@
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="@id/guideline_image"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@tools:sample/avatars" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_image"
@@ -42,6 +43,7 @@
             android:gravity="end"
             android:text="@{String.format(@string/shift_id,shift.id)}"
             app:layout_constraintEnd_toEndOf="parent"
+            tools:text="ID: 1"
             app:layout_constraintStart_toEndOf="@id/guideline_image"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -50,6 +52,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@{String.format(@string/shift_start,shift.start)}"
+            tools:text="Start: Today"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/guideline_image"
             app:layout_constraintTop_toBottomOf="@id/textView_id" />
@@ -60,6 +63,7 @@
             android:layout_height="wrap_content"
             android:text="@{String.format(@string/shift_end,shift.end)}"
             app:layout_constraintEnd_toEndOf="parent"
+            tools:text="End: Today"
             app:layout_constraintStart_toEndOf="@id/guideline_image"
             app:layout_constraintTop_toBottomOf="@id/textView_start" />
 
@@ -69,6 +73,7 @@
             android:layout_height="wrap_content"
             android:text="@{String.format(@string/shift_location,shift.latitude, shift.longitude)}"
             app:layout_constraintEnd_toEndOf="parent"
+            tools:text="Location: 1.3, 4.6"
             app:layout_constraintStart_toEndOf="@id/guideline_image"
             app:layout_constraintTop_toBottomOf="@id/textView_end" />
 
