--- a/shifts/src/main/res/layout/activity_shifts.xml
+++ b/shifts/src/main/res/layout/activity_shifts.xml
@@ -1,10 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <com.diego.shifts.views.ShiftsRecyclerView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ShiftsActivity" />
+        android:layout_height="match_parent">
 
+        <com.diego.shifts.views.ShiftsRecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@id/button_start_shift"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:context=".ShiftsActivity" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_start_shift"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/shift_padding"
+            android:layout_marginLeft="@dimen/shift_padding"
+            android:layout_marginEnd="@dimen/shift_padding_half"
+            android:layout_marginRight="@dimen/shift_padding_half"
+            android:text="@string/shift_start_shift"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/guideline"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_end_shift"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/shift_padding_half"
+            android:layout_marginLeft="@dimen/shift_padding_half"
+            android:layout_marginEnd="@dimen/shift_padding"
+            android:layout_marginRight="@dimen/shift_padding"
+            android:text="@string/shift_end_shift"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/guideline" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
