--- a/shifts/src/main/res/values/dimens.xml
+++ b/shifts/src/main/res/values/dimens.xml
@@ -2,5 +2,7 @@
 <resources>
 
     <dimen name="shift_item_spacing">16dp</dimen>
+    <dimen name="shift_padding">16dp</dimen>
+    <dimen name="shift_padding_half">8dp</dimen>
 
 </resources>
