--- a/shifts/src/main/res/layout/activity_shifts.xml
+++ b/shifts/src/main/res/layout/activity_shifts.xml
@@ -3,6 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.diego.shifts.viewmodels.ShiftsViewModel" />
+
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -12,6 +20,7 @@
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@id/button_start_shift"
             app:layout_constraintTop_toTopOf="parent"
+            app:shifts="@{viewModel.data}"
             tools:context=".ShiftsActivity" />
 
         <androidx.constraintlayout.widget.Guideline
