Add use cases to handle api response

--- a/shifts/src/main/res/layout/recycler_shift_item.xml
+++ b/shifts/src/main/res/layout/recycler_shift_item.xml
@@ -51,7 +51,7 @@
             android:id="@+id/textView_start"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@{String.format(@string/shift_start,shift.start)}"
+            android:text="@{String.format(@string/shift_start,shift.startDate)}"
             tools:text="Start: Today"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/guideline_image"
@@ -61,7 +61,7 @@
             android:id="@+id/textView_end"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@{String.format(@string/shift_end,shift.end)}"
+            android:text="@{String.format(@string/shift_end,shift.endDate)}"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="End: Today"
             app:layout_constraintStart_toEndOf="@id/guideline_image"
