--- a/shifts/src/main/res/layout/activity_shifts.xml
+++ b/shifts/src/main/res/layout/activity_shifts.xml
@@ -20,7 +20,7 @@
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@id/button_start_shift"
             app:layout_constraintTop_toTopOf="parent"
-            app:shifts="@{viewModel.data}"
+            app:shifts="@{viewModel.data.shifts}"
             tools:context=".ShiftsActivity" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -38,6 +38,7 @@
             android:layout_marginLeft="@dimen/shift_padding"
             android:layout_marginEnd="@dimen/shift_padding_half"
             android:layout_marginRight="@dimen/shift_padding_half"
+            android:onClick="@{()-> viewModel.startShift()}"
             android:text="@string/shift_start_shift"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/guideline"
@@ -51,6 +52,7 @@
             android:layout_marginLeft="@dimen/shift_padding_half"
             android:layout_marginEnd="@dimen/shift_padding"
             android:layout_marginRight="@dimen/shift_padding"
+            android:onClick="@{()->viewModel.endShift() }"
             android:text="@string/shift_end_shift"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
